tests/fixtures/recursive_type.out
error: Could not match types:

        @ __ROOT__/tests/fixtures/recursive_type.rb:5
      5 |    a = []
                 ^^ t1, with:
        @ __ROOT__/tests/fixtures/recursive_type.rb:5
      5 |    a = []
                 ^^ Array::[t1]

        - arising from an attempt to match:

        @ (builtin stdlib):790
    790 |    def <<(ElementType item) => :self; end
                    ^^^^^^^^^^^ t1, with:
        @ __ROOT__/tests/fixtures/recursive_type.rb:6
      6 |    a << a
                  ^ Array::[t1]
        @ __ROOT__/tests/fixtures/recursive_type.rb:6
      6 |    a << a
             ^^^^^^ in this expression
